--- a/logstash/values.yaml
+++ b/logstash/values.yaml
@@ -60,7 +60,7 @@ secrets: []
 secretMounts: []
 
 image: "docker.elastic.co/logstash/logstash"
-imageTag: "8.0.0-SNAPSHOT"
+imageTag: "8.0.0-snapshot"
 imagePullPolicy: "IfNotPresent"
 imagePullSecrets: []
 
