--- a/metricbeat/values.yaml
+++ b/metricbeat/values.yaml
@@ -167,7 +167,7 @@ extraInitContainers: ""
 hostPathRoot: /var/lib
 
 image: "docker.elastic.co/beats/metricbeat"
-imageTag: "8.0.0-SNAPSHOT"
+imageTag: "8.0.0-snapshot"
 imagePullPolicy: "IfNotPresent"
 imagePullSecrets: []
 
