--- a/elasticsearch/values.yaml
+++ b/elasticsearch/values.yaml
@@ -50,7 +50,7 @@ secretMounts: []
 #    path: /usr/share/elasticsearch/config/certs
 #    defaultMode: 0755
 
-image: "docker.elastic.co/elasticsearch/elasticsearch"
+image: "twobombs/elasticsearch/elasticsearch"
 imageTag: "8.0.0-snapshot"
 imagePullPolicy: "IfNotPresent"
 
